Music/ColorLoseWinFeedback/Fixes

--- a/VinezorsiOS/VinezorsiOS/Storyboard.storyboard
+++ b/VinezorsiOS/VinezorsiOS/Storyboard.storyboard
@@ -33,10 +33,22 @@
                                     <action selector="buttonBegin_OnPress:" destination="jFx-zD-t1A" eventType="touchDown" id="qjo-9b-Te5"/>
                                 </connections>
                             </button>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nLn-B6-Cjr" userLabel="Switch_Music">
+                                <rect key="frame" x="416" y="496" width="51" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </switch>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Enable Music" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jWD-EV-fU7" userLabel="Label_Music">
+                                <rect key="frame" x="303" y="501" width="105" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <connections>
+                        <outlet property="Switch_Music" destination="nLn-B6-Cjr" id="diG-5Y-jut"/>
                         <outlet property="TextField_Input" destination="jIj-nJ-RSM" id="4Y3-Ra-aAT"/>
                     </connections>
                 </viewController>
