Main: Demo Setup, panel shake fixed, score fixed

--- a/Ogre3DSeparateBuildSpace/VinezorsiOS/VinezorsiOS/MainView.storyboard
+++ b/Ogre3DSeparateBuildSpace/VinezorsiOS/VinezorsiOS/MainView.storyboard
@@ -14,10 +14,13 @@
                         <viewControllerLayoutGuide type="bottom" id="gPu-24-wrU"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="BVw-nD-a6r">
-                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     </view>
+                    <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pQX-OH-g0L" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
